switched to pwm working, broke i2s

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ endif()
 # -----------------------------------------------------------------------------
 add_executable(basicPicoAudio
         main.cpp
+        picoAudoSetup_pwm.h
 )
 
 # -----------------------------------------------------------------------------
