running without debug probe... accepting usb serial directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,99 +1,26 @@
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
-set(sdkVersion 2.1.1)
-set(toolchainVersion 14_2_Rel1)
-set(picotoolVersion 2.1.1)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
-# ====================================================================================
-# -----------------------------------------------------------------------------
-# Minimum required CMake version
-# -----------------------------------------------------------------------------
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.13)
 set(PICO_BOARD pico2_w)
-
-# -----------------------------------------------------------------------------
-# Set environment variables for the Pico SDK and Pico Extras.
-# These should point to your local copies.
-# -----------------------------------------------------------------------------
-set(ENV{PICO_SDK_PATH} "/Users/charlieculbert/.pico-sdk/sdk/2.1.1
-")
-set(ENV{PICO_EXTRAS_PATH} "/Users/charlieculbert/.pico-sdk/sdk/2.1.1
-")
-
-# -----------------------------------------------------------------------------
-# Tell the import scripts NOT to fetch from Git (use local copies instead)
-# -----------------------------------------------------------------------------
-set(PICO_SDK_FETCH_FROM_GIT 0)
-set(PICO_EXTRAS_FETCH_FROM_GIT 0)
-
-# -----------------------------------------------------------------------------
-# Optional: Specify exact Git tags for reproducible builds
-# ---------------------------------------------e--------------------------------
-# set(PICO_SDK_GIT_TAG v1.5.0)
-# set(PICO_EXTRAS_GIT_TAG v1.5.0)
-
-# -----------------------------------------------------------------------------
-# Include the Pico SDK and Pico Extras import scripts.
-# These must be included before calling project().
-# -----------------------------------------------------------------------------
 include(pico_sdk_import.cmake)
-# include(pico_extras_import.cmake)
 
-# -----------------------------------------------------------------------------
-# Define the project and the languages used (C, C++, and ASM)
-# -----------------------------------------------------------------------------
 project(PicoSynth C CXX ASM)
 
-# -----------------------------------------------------------------------------
-# Set the C and C++ standard versions
-# -----------------------------------------------------------------------------
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-# -----------------------------------------------------------------------------
-# Initialize the Pico SDK (this sets up necessary SDK variables and targets)
-# -----------------------------------------------------------------------------
 pico_sdk_init()
 
-# -----------------------------------------------------------------------------
-# Verify that the Pico SDK version is at least 2.0.0.
-# -----------------------------------------------------------------------------
-if (PICO_SDK_VERSION_STRING VERSION_LESS "2.0.0")
-    message(FATAL_ERROR "Require at least Raspberry Pi Pico SDK version 2.0.0")
-endif()
-
-
-
-# -----------------------------------------------------------------------------
-# Define the executable target 'PicoSynth' with its source files.
-# -----------------------------------------------------------------------------
 add_executable(PicoSynth
         main.cpp
 )
 
 pico_generate_pio_header(PicoSynth ${CMAKE_CURRENT_LIST_DIR}/audio_i2s.pio)
 
-
-# -----------------------------------------------------------------------------
-# Specify include directories for the target
-# -----------------------------------------------------------------------------
 target_include_directories(PicoSynth PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
-
         choc
-
 )
 
-# -----------------------------------------------------------------------------
-# Link the target with the required Pico libraries
-# -----------------------------------------------------------------------------
+# Fixed library linking - removed tinyusb_device which conflicts with pico_stdio_usb
 target_link_libraries(PicoSynth PRIVATE
         pico_stdlib
         pico_multicore
@@ -101,30 +28,11 @@ target_link_libraries(PicoSynth PRIVATE
         hardware_pwm
         hardware_pio
         hardware_interp
-        tinyusb_device
-        pico_stdio_usb  # <-- Add this line
-
 )
 
-# -----------------------------------------------------------------------------
-# Set C++ compile features (C++17 in this case)
-# -----------------------------------------------------------------------------
 target_compile_features(PicoSynth PRIVATE cxx_std_17)
 
-# -----------------------------------------------------------------------------
-# Define compile-time preprocessor definitions for I2S configuration.
-# Adjust these definitions as needed.
-# -----------------------------------------------------------------------------
-target_compile_definitions(PicoSynth PRIVATE
-)
-
-# -------------------------------------------------------------------------------
-# Enable USB serial and UART for debugging
-# -----------------------------------------------------------------------------
 pico_enable_stdio_usb(PicoSynth 1)
-pico_enable_stdio_uart(PicoSynth 1)
+pico_enable_stdio_uart(PicoSynth 0)
 
-# -----------------------------------------------------------------------------
-# Generate additional output files (map/bin/hex, etc.)
-# -----------------------------------------------------------------------------
 pico_add_extra_outputs(PicoSynth)
