--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
-set(PICO_BOARD pico)
+set(PICO_BOARD pico2_w)
 include(pico_sdk_import.cmake)
 
 project(PicoSynth C CXX ASM)
